Aggiunta di una dropdown

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
           <!-- plan -->
           <ul class="menu plan">
             <li>
-              personale
+              <a href="#">
+                personale
+              </a>
             </li>
             <li>
-              business
+              <a href="#">
+                business
+              </a>
             </li>
           </ul>
           <!-- fine plan -->
@@ -49,29 +53,46 @@
               </a>
             </li>
             <li>
-              <a href="#">
-                conti
-              </a>
+              conti
             </li>
             <li>
-              <a href="#">
-                prodotto
-              </a>
+              prodotto
+            </li>
+            <li class="con-dropdown">
+              azienda
+              <ul class="dropdown">
+                <li>
+                  <a href="#">
+                    Chi siamo
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Blog
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Lavora con noi
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Affiliates
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Contatto
+                  </a>
+                </li>
+              </ul>
             </li>
             <li>
-              <a href="#">
-                azienda
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                aiuto
-              </a>
+              aiuto
             </li>
             <li class="lingua">
-              <a href="#">
-                it
-              </a>
+              it
             </li>
             <li>
               <button class="cta" type="button">
