--- a/index.html
+++ b/index.html
@@ -17,212 +17,201 @@
       <!-- NAVBAR -->
       <nav class="navbar">
 
-        <!-- Navbar Left -->
-        <div class="navbar-left">
+        <!-- Pagina corrente -->
+        <ul class="menu pagina-corrente">
+          <li class="logo">
+            <a href="#">
+              <img src="img/logo-revolut.png" alt="LOGO REVOLUT">
+            </a>
+          </li>
+          <li>
+            <a href="#" class="active">
+              personale
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              business
+            </a>
+          </li>
+        </ul>
+        <!-- Fine Pagina corrente -->
 
-          <!-- logo -->
-          <div class="logo">
-            <img src="img/logo-revolut.png" alt="LOGO REVOLUT">
-          </div>
-          <!-- fine logo -->
-
-          <!-- plan -->
-          <ul class="menu plan">
-            <li>
-              <a href="#" class="active">
-                personale
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                business
-              </a>
-            </li>
-          </ul>
-          <!-- fine plan -->
-        </div>
-        <!-- Fine Navbar Left -->
-
-        <!-- Navbar Right -->
-        <div class="navbar-right">
-
-          <!-- navigazione -->
-          <ul class="menu navigazione">
-            <li>
-              <a href="#">
-                tariffazione
-              </a>
-            </li>
-            <li id="conti" class="con-dropdown">
-              <a href="#">
-                conti
-              </a>
-              <ul class="dropdown">
-                <li>
-                  <a href="#">
-                    Standard
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Premuim
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Metal
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="nuovo">
-                    junior
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li id="prodotti" class="con-dropdown">
-              <a href="#">
-                prodotti
-              </a>
-              <ul class="dropdown">
-                <li>
-                  <a href="#">
-                    Invia denaro all'estero
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Effettua e ricevi pagamenti
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    imposta i Salvadanai
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    imposta i budget
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Paga con Apple Pay
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="nuovo">
-                    Dona agli enti di beneficienza
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    tutelati
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li id="azienda" class="con-dropdown">
-              <a href="#">
-                azienda
-              </a>
-              <ul class="dropdown">
-                <li>
-                  <a href="#">
-                    Chi siamo
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Blog
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Lavora con noi
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="nuovo">
-                    Affiliates
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Contatto
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li id="aiuto" class="con-dropdown freccia">
-              <a href="#">
-                aiuto
-              </a>
-              <ul class="dropdown">
-                <li>
-                  <a href="#">
-                    Community
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Centro Assistenza
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Sicurezza
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    Stato di sistema
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li id="lingua" class="lingua con-dropdown freccia">
-              <a href="#">
-                it
-                <i class="fas fa-chevron-down"></i>
-              </a>
-              <ul class="dropdown">
-                <li>
-                  <a href="#">
-                    en
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    it
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    ger
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    sp
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    fr
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <button id="scopri" class="cta" type="button">
-                Scarica l'app
-              </button>
-            </li>
-          </ul>
-          <!-- fine navigazione -->
-        </div>
-        <!-- Fine Navbar Right -->
+        <!-- navigazione -->
+        <ul class="menu navigazione">
+          <li>
+            <a href="#">
+              tariffazione
+            </a>
+          </li>
+          <li id="conti" class="con-dropdown">
+            <a href="#">
+              conti
+            </a>
+            <ul class="dropdown">
+              <li>
+                <a href="#">
+                  standard
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  premuim
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  metal
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nuovo">
+                  junior
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li id="prodotti" class="con-dropdown">
+            <a href="#">
+              prodotti
+            </a>
+            <ul class="dropdown">
+              <li>
+                <a href="#">
+                  invia denaro all'estero
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  effettua e ricevi pagamenti
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  imposta i Salvadanai
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  imposta i budget
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  paga con Apple Pay
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nuovo">
+                  dona agli enti di beneficienza
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  tutelati
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li id="azienda" class="con-dropdown">
+            <a href="#">
+              azienda
+            </a>
+            <ul class="dropdown">
+              <li>
+                <a href="#">
+                  chi siamo
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  blog
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  lavora con noi
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nuovo">
+                  affiliates
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  contatto
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li id="aiuto" class="con-dropdown freccia">
+            <a href="#">
+              aiuto
+            </a>
+            <ul class="dropdown">
+              <li>
+                <a href="#">
+                  community
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  centro Assistenza
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  sicurezza
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  stato di sistema
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li id="lingua" class="lingua con-dropdown freccia">
+            <a href="#">
+              it
+              <i class="fas fa-chevron-down"></i>
+            </a>
+            <ul class="dropdown">
+              <li>
+                <a href="#">
+                  en
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  it
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  ger
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  sp
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  fr
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <button id="scopri" class="cta" type="button">
+              Scarica l'app
+            </button>
+          </li>
+        </ul>
+        <!-- fine navigazione -->
       </nav>
       <!-- FINE NAVBAR -->
     </header>
