Aggiunta di una classe 'visible' per mostrare i menù

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               </li>
             </ul>
           </li>
-          <li id="aiuto" class="con-dropdown freccia">
+          <li id="aiuto" class="con-dropdown">
             <a href="#">
               aiuto
             </a>
