--- a/index.html
+++ b/index.html
@@ -207,10 +207,13 @@
           </li>
           <li>
             <button id="scopri" class="cta" type="button">
-              Scarica l'app
+              <i class="fas fa-download"></i>
             </button>
           </li>
         </ul>
+        <div class="burger">
+          <i class="fas fa-bars"></i>
+        </div>
         <!-- fine navigazione -->
       </nav>
       <!-- FINE NAVBAR -->
